# ChangeLog for dev-perl/Net-DBus
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Net-DBus/ChangeLog,v 1.18 2011/07/06 13:14:46 tove Exp $

*Net-DBus-1.0.0 (06 Jul 2011)

  06 Jul 2011; Torsten Veller <tove@gentoo.org> +Net-DBus-1.0.0.ebuild:
  Version bump

  13 Oct 2010; Raúl Porcel <armin76@gentoo.org> Net-DBus-0.33.6.ebuild:
  alpha/ia64 stable

  11 Aug 2010; Joseph Jezak <josejx@gentoo.org> Net-DBus-0.33.6.ebuild:
  Marked ~ppc for bug #313563.

  22 May 2010; Raúl Porcel <armin76@gentoo.org> Net-DBus-0.33.6.ebuild:
  Add ~alpha/~ia64

  28 Nov 2009; Tiago Cunha <tcunha@gentoo.org> Net-DBus-0.33.6.ebuild:
  stable sparc, bug 287926

  20 Nov 2009; Markus Meier <maekke@gentoo.org> Net-DBus-0.33.6.ebuild:
  x86 stable, bug #287926

  30 Sep 2008; Torsten Veller <tove@gentoo.org> -Net-DBus-0.33.4.ebuild,
  -Net-DBus-0.33.5.ebuild:
  Cleanup

  30 Aug 2008; Thomas Anderson <gentoofan23@gentoo.org>
  Net-DBus-0.33.6.ebuild:
  stable amd64, bug 209062

  16 May 2008; Raúl Porcel <armin76@gentoo.org> Net-DBus-0.33.6.ebuild:
  Add ~sparc

*Net-DBus-0.33.6 (23 Apr 2008)

  23 Apr 2008; Torsten Veller <tove@gentoo.org> +Net-DBus-0.33.6.ebuild:
  Version bump.

  22 Apr 2008; Samuli Suominen <drac@gentoo.org> -Net-DBus-0.33.3.ebuild,
  Net-DBus-0.33.4.ebuild, Net-DBus-0.33.5.ebuild:
  Move pkgconfig from RDEPEND to DEPEND.

*Net-DBus-0.33.5 (20 Oct 2007)

  20 Oct 2007; Christian Hartmann <ian@gentoo.org> +Net-DBus-0.33.5.ebuild:
  Bump for bug #190318 and bug #192922

  07 Jan 2007; Michael Cummings <mcummings@gentoo.org>
  Net-DBus-0.33.4.ebuild:
  Marking amd64 stable

  29 Nov 2006; Saleem Abdulrasool <compnerd@gentoo.org> Net-DBus-0.33.4.ebuild:
  Add ~x86 keyword

*Net-DBus-0.33.4 (06 Nov 2006)

  06 Nov 2006; Michael Cummings <mcummings@gentoo.org>
  +Net-DBus-0.33.4.ebuild:
  Version bump

  27 Oct 2006; Chris White <chriswhite@gentoo.org> Net-DBus-0.33.3.ebuild: