@@ -1,16 +1,20 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA256
+Hash: SHA512
 
 DIST Pango-1.221.tar.gz 43864 RMD160 63e0d34a9f565b46b9ff2d9cdd77b680024c546c SHA1 044bc487aa33d77786f4488b604d98c9116f9448 SHA256 af524d0b6749fb5762f1152dbe02ed547a2a7308a1f667fce96cfbb2ca7d25c6
 DIST Pango-1.222.tar.gz 45285 RMD160 124eb33884cab56a329b28d78b7fc45b88a18d21 SHA1 2ebd01c40afba5d66b8eb123728199eacbdead0d SHA256 c9a07fae8e46d72b9d6531446c2efad7ad1cfbe423e5643f339b4b56554fbf41
 EBUILD Pango-1.221.ebuild 723 RMD160 d3761bea66e49027b7d2633e21f77695ffd844a6 SHA1 b50a857eb8a77c8fa4bceaf612b297d8ee7df10a SHA256 7ea696f876c8688fc6c8bb6c9ebfc2c13e376d990c22bc87f2d891cba07a3511
-EBUILD Pango-1.222.0.ebuild 754 RMD160 f98567c92f71a7e6b40d1ef5014cd07fbc5d8ad5 SHA1 cbd00373360c0a83f1bc495bb3748d3aeeb2f77f SHA256 fffad7c2222eb4d4a6b95f73579f9dcf1e594d37bf60b43858d7a21249e0bc50
-MISC ChangeLog 2068 RMD160 945c639f8ab79c98167587895ea07cb16fee0d8b SHA1 6c23071f1d449257a922a9ff05fde9799b32ee6d SHA256 759598c1b10f81173cb7c5e9809a5473b5911915a0b1cb7d4d11090e3279e811
+EBUILD Pango-1.222.0.ebuild 752 RMD160 475e341f77f162b52c6eaf7ca5596f85f28bfd39 SHA1 f77b49bd4064b1b0fe643563c000ff1aad04416c SHA256 f62186631b7760fdd6c497ecc0f4ad95a1abfbaa5822ec1c0a27fa58c5ab95a7
+MISC ChangeLog 2175 RMD160 8eefe87a63b39f0e2203aa8ecd4a66be53d88347 SHA1 78f8ad724a1ee9d203a0aadc3a1c715c06560c60 SHA256 7c9f9fe263f86d925cb78db03f9d0d8fade69c601a162840ad9a331a166c2ec3
 MISC metadata.xml 231 RMD160 c8fac6f3ad3fed5cb0f7de44ba1eefc17e5ef7d8 SHA1 f5ed3b4f230213e79590a6de984f7b9949b473bc SHA256 355cd38490b3a04a9ff33eb7a48d64f4a07aa9e7a07d5501810212647e13be63
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.18 (GNU/Linux)
+Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEAREIAAYFAk49HPUACgkQV3J2n04Eauy9iACfcJRAXUzRto6RCJXtzzyLGV1s
-tj4An2qFpGmS2cUkxookrsAYqvVXS2h8
-=sWC8
+iQEcBAEBCgAGBQJPR2bvAAoJEOTDgjZ80txd/HgH/2RtGxIid2fKzW4JC/W7mlMN
+lkaxc+qorSZKKnDYjnXYefd+TUO01Jsgp8MHO/H0qUswalRxeesDpgtbPVhvF6I8
+HeeLFXlXZ80hPLUGAUBqS712AT057iUG/mCv5us7AhL4IAsLGRIa1nZJXheuqKhF
+EVVLytnHdONddYZ3nKCyB06Dn0czwybAZm1EGZUl8MZ5+npIupDva2TpVcqH1TX+
+nw/5mrGSxDF17rA/LYY5oCQJVaxOIIuy8/OFw+ueIt6LKPcD0eLe82UxEN0qT+hp
+oxpeJQ+od14zMeGQKo576T6XYP3shutwv4yrnWI3vbj5AFZYxTjbCZQ59tu9+iY=
+=aatC
 -----END PGP SIGNATURE-----
