@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/Net-DBus
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Net-DBus/ChangeLog,v 1.18 2011/07/06 13:14:46 tove Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Net-DBus/ChangeLog,v 1.19 2012/02/24 10:26:23 ago Exp $
+
+  24 Feb 2012; Agostino Sarubbo <ago@gentoo.org> Net-DBus-1.0.0.ebuild:
+  Stable for amd64, wrt bug #400181
 
 *Net-DBus-1.0.0 (06 Jul 2011)
 
